# cligraph

./: CMakeLists.txt  LICENSE  README.md  compile_commands.json
.ccls-cache/@@mnt@f@git@cligraph/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@ctype.h.blob  @usr@include@curses.h.blob  @usr@include@endian.h.blob  @usr@include@errno.h.blob  @usr@include@eti.h.blob  @usr@include@features.h.blob  @usr@include@limits.h.blob  @usr@include@linux@errno.h.blob  @usr@include@linux@limits.h.blob  @usr@include@menu.h.blob  @usr@include@ncurses_dll.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdint.h.blob  @usr@include@stdio.h.blob  @usr@include@stdlib.h.blob  @usr@include@string.h.blob  @usr@include@strings.h.blob  @usr@include@unctrl.h.blob  @usr@include@x86_64-linux-gnu@asm@errno.h.blob  @usr@include@x86_64-linux-gnu@bits@byteswap.h.blob  @usr@include@x86_64-linux-gnu@bits@endian.h.blob  @usr@include@x86_64-linux-gnu@bits@endianness.h.blob  @usr@include@x86_64-linux-gnu@bits@errno.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn-common.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn.h.blob  @usr@include@x86_64-linux-gnu@bits@libc-header-start.h.blob  @usr@include@x86_64-linux-gnu@bits@local_lim.h.blob  @usr@include@x86_64-linux-gnu@bits@long-double.h.blob  @usr@include@x86_64-linux-gnu@bits@posix1_lim.h.blob  @usr@include@x86_64-linux-gnu@bits@posix2_lim.h.blob  @usr@include@x86_64-linux-gnu@bits@pthreadtypes.h.blob  (+46 more)
src/: coordinates.c  coordinates.h  cord.h  main.c  window.c  window.h
(+10 files in other folders)
